--- a/src/frontend/ui.portal.jenn/Views/Shared/Components/Cidades/Default.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/Components/Cidades/Default.cshtml
@@ -31,16 +31,18 @@
                 countpagina++;
             }
 
-            <div style="text-align:center">
-                <a onclick="anterior('cidade')" class="btn">
-                    <img src="/img/exames/seta-esq.png">
-                </a>
+            if (i > qntporpagina)
+            {
+                <div style="text-align:center">
+                    <a onclick="anterior('cidade')" class="btn">
+                        <img src="/img/exames/seta-esq.png">
+                    </a>
 
-                <a onclick="proximo('cidade')" class="btn">
-                    <img src="/img/exames/seta-dir.png">
-                </a>
-            </div>
-
+                    <a onclick="proximo('cidade')" class="btn">
+                        <img src="/img/exames/seta-dir.png">
+                    </a>
+                </div>
+            }
 
             <div style="margin-top:0" class="action-list botoesfiltro">
                 <a href="" class="link">
@@ -50,7 +52,7 @@
                     Aplique(0)
                 </a>
             </div>
-        }
+            }
     </div>
 </div>
 
