--- a/src/frontend-crud/crud.ui.portal.jenn/Views/ProcedimentoEmpresa/Create.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/ProcedimentoEmpresa/Create.cshtml
@@ -147,11 +147,15 @@
                         <INPUT asp-for="PermiteAgendamento" TYPE="radio" id="PermiteAgendamento" NAME="PermiteAgendamento" checked VALUE="0"> Não
                     </div>
 
+                    <div class="form-group">
+                        <div class="col-md-8">
+                            <div class="alert-danger" asp-validation-summary="All"></div>
+                        </div>
 
+                    </div>
                 </div>
 
-            </div>
-
+            
 
 
             </div>
