--- a/src/frontend/ui.portal.jenn/Views/Shared/CentralAjuda.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/CentralAjuda.cshtml
@@ -81,10 +81,10 @@
                             <label class="tab-label" for="chck2">O que é a sugestão de agenda?</label>
                             <div class="tab-content">
                                 <p>
-                                    A sugestão de agenda é uma facilidade que a Jenn traz ao paciente, nesta funcionalidade o paciente informa a data e hora que gostaria de ser atendido,
+                                    A sugestão de agenda é uma facilidade que a Jenn traz ao paciente, nesta funcionalidade o paciente informa a data e hora que gostaria de ser atendido.
                                 </p>
                                 <p>
-                                    clínica ou laboratório recebe a sugestão e confirma ou sugere a data mais próxima de forma online e sem burocracia.
+                                   A clínica ou laboratório recebe a sugestão e confirma ou sugere a data mais próxima de forma online e sem burocracia.
                                 </p>
                                 <p>
                                     <strong>   É importante destacar que a data sugerida não é um agendamento podendo sofrer alterações de acordo com a disponibilidade do estabelecimento de saúde.</strong>
