--- a/src/frontend-crud/crud.ui.portal.jenn/Views/Empresa/Edit.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/Empresa/Edit.cshtml
@@ -10,6 +10,7 @@
     <input type="hidden" asp-for="Ativo" />
     <input type="hidden" asp-for="MatrizID" />
     <input type="hidden" asp-for="EmpresaID" />
+    <span></span>
     <fieldset>
         <div class="panel panel-primary">
             <div class="panel-heading">Atualizar informações da Empresa/Filial</div>
@@ -137,7 +138,7 @@
                         </div>
                     </div>
 
-                    <label class="col-md-2 control-label" for="prependedtext">Link loja </label>
+                    <label class="col-md-2 control-label" for="prependedtext">Apelido </label>
                     <div class="col-md-3">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
@@ -227,26 +228,30 @@
                             <span class="input-group-addon">UF / Cidade</span>
                             <select id="sel_cidade" asp-for="num_cidade" asp-items="ViewBag.Cidades" required class="form-control"></select>
                         </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-md-2 control-label" for="Cadastrar"></label>
+                    <div class="col-md-8">
+                        <button id="Cadastrar" name="Cadastrar" class="btn btn-success" type="Submit">Salvar</button>
+                        <button id="Cancelar" name="Cancelar" class="btn btn-danger" type="Reset">Cancelar</button>
+                        <a class="btn btn-info" asp-action="Index">Voltar Para a Lista</a>
 
                     </div>
-
+                </div>
+                <div class="form-group">
+                    <div class="col-md-8">
+                        <div class="alert-danger" asp-validation-summary="All"></div>
+                    </div>
 
                 </div>
 
 
             </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="Cadastrar"></label>
-                <div class="col-md-8">
-                    <button id="Cadastrar" name="Cadastrar" class="btn btn-success" type="Submit">Salvar</button>
-                    <button id="Cancelar" name="Cancelar" class="btn btn-danger" type="Reset">Cancelar</button>
-                    <a class="btn btn-info" asp-action="Index">Voltar Para a Lista</a>
 
                 </div>
-            </div>
-
-        </div>
-    </fieldset>
+</fieldset>
 </form>
 <br />
 @section Scripts {
